<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">MeetUs</string>

    <string name="title_activity_login">Login</string>

    <string name="Signupwith">Sign up with </string>

    <string name="EmailHint">Your Wild Email </string>

    <string name="PasswordHint">Your Wild Password </string>

    <string name="SignUp">Sign Up</string>

    <string name="SignIn">Sign In</string>

    <string name="SignOut">Reset Password</string>

    <string name="auth_failed">Echec</string>

    <string name="auth_fail">Echec, cest dommage</string>

    <string name="firebase_status_fmt"> Firebase User: %s </string>

    <string name="Intro">The very best way to #meetyourdev
        and #meetwilders all around the world. </string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>

    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>


    <string name="label_facebook_login">Firebase + Facebook Login</string>

    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>


    <string name="label_twitter_login">Firebase + Twitter Login</string>

    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>


    <string name="label_emailpassword">Email/Password Authentication</string>

    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="google_maps_key">AIzaSyAcFTWwL8GZI1FClwJuGcrQMxSFZpNdyiI</string>


    <string name="label_anonymous_auth">Anonymous Authentication</string>

    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>

    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>

    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>

    <string name="get_custom_token">Get Token</string>

    <string name="sign_in">Sign In</string>

    <string name="create_account">Create Account</string>

    <string name="sign_out">Sign Out</string>

    <string name="verify_email">Verify Email</string>

    <string name="disconnect">Disconnect</string>

    <string name="loading">Loading…</string>


    <string name="custom_token">Custom Token</string>

    <string name="signed_out">Signed Out</string>

    <string name="token_null">Token: null</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_user_management">Firebase User Management</string>


    <string name="google_status_fmt">Google User: %s</string>

    <string name="google_title_text">Google Sign In</string>


    <string name="facebook_status_fmt">Facebook User: %s</string>

    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>

    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>

    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>

    <string name="email_fmt">Email: %s</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_activity_profil_tool_bar">ProfilToolBar</string>

    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    //Nom des Tabs Toolbar//

    <string name="TabMonProfil">Mon Profil</string>
    <string name="TabQuiestce">Qui est-ce ?</string>
    <string name="TabDevine">Devine!</string>
    <string name="TabAroundMe">Wild World</string>
    <string name="Tuto">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_wild_world">Map</string>


    <!-- A trier -->
    <!-- Titles -->
    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>

    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- Messages -->
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <!-- Other strings -->
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="title_activity_tool_bar">ToolBarActivity</string>
    <string name="title_activity_tabbed_">Tabbed_Activity</string>
    <string name="title_activity_view_pager">ViewPager</string>
    <string name="title_activity_screen_slide">ScreenSlideActivity</string>
    <string name="section_label">Ca Marche !!!!</string>7
    <string name="TutorialMeetUs">Welcome on MeetUs ! MeetUs is a brain new application that aim for developpers interaction and dialog, using funny games !
     First of all, check other user Profile by swiping on the right of this page, and see who they are, learn what they do !
    When you\'re ready, swipe again and play Guess. You\'ll be given infos about a random Wilder, and you will see a blurred photo. At the bottom of the page,
    try to guess who he/she is by typing his name. The closest you answer, the focused will be the picture ! You got\'t five try  ! At the  end you\ll be given a note on how much you know the people you have been guessing about!

    Have fun !


    Credits : Mathieu, Marine, Sarah, your MeetUs Team ! </string>
    <string name="title_activity_profil_welcome">ProfilWelcome</string>
    <string name="toastCreateProfil">\"Les Toast c\'est bon\"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="verify_your_password">Verify your Password</string>
    <string name="minimum_password">Password trop court, 6 caractéres minimum !</string>
    <string name="lbl_forgot_password">Forgot password string</string>
    <string name="forgot_password_msg">Forgot password msg</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Oh I remember now !</string>
    <string name="guess">GUESS</string>
    <string name="trybutton">TRY</string>
    <string name="textviewspecialite">Spécialité</string>
    <string name="textviewville">Ville</string>
    <string name="guesstvage">Age</string>
    <string name="guesstvwild_side">Wild Side</string>
    <string name="show_me_your_wild_face">Show me your Wild face !</string>
    <string name="welcomeprofilstring">Welcome on Meetus</string>
    <string name="nxt_string_wlcome">Next</string>
    <string name="validateyouremail">VALIDATE YOUR EMAIL BEFORE LOGIN !</string>
    <string name="toastcheckyourmail">Check your mailbox to login ;)</string>
    <string name="age">Age</string>

</resources>
