<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#ffffff"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mathieu.meetus.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/meetus"
        android:id="@+id/imageView2"
        android:layout_marginTop="136dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="35dp"
        app:srcCompat="@drawable/transparent_text_effect"
        android:id="@+id/imageView9"
        android:maxHeight="15dp"
        android:maxWidth="15dp"
        android:layout_marginBottom="41dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignRight="@+id/emailText"
        android:layout_alignEnd="@+id/emailText" />

    <ImageView
        android:layout_width="165dp"
        android:layout_height="165dp"
        app:srcCompat="@drawable/welcome"
        android:layout_centerHorizontal="true"
        android:maxWidth="25dp"
        android:id="@+id/imageView6"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageView9"
        android:layout_toStartOf="@+id/imageView9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/EmailHint"
        android:ems="10"
        android:id="@+id/emailText"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/PasswordHint"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_below="@+id/emailText"
        android:layout_alignLeft="@+id/emailText"
        android:layout_alignStart="@+id/emailText"
        android:layout_marginTop="9dp" />

    <Button
        android:text="@string/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/buttonSignIn"
        android:background="@drawable/barreguess"
        android:layout_below="@+id/passwordText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp"
        android:background="@drawable/barreguess"
        android:layout_below="@+id/buttonSignIn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/SignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/barreguess"
        android:id="@+id/buttonReset"
        android:layout_below="@+id/buttonSignUp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/imageView9"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:id="@+id/mStatusTextView" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mStatusTextView"
        android:layout_alignRight="@+id/mStatusTextView"
        android:layout_alignEnd="@+id/mStatusTextView"
        android:id="@+id/mDetailTextView" />
</RelativeLayout>
