<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mathieu.meetus.LoginActivity">


    <TextView

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/mDetailTextView"
        android:layout_below="@+id/verify_email_button"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="11dp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/mStatusTextView"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/verify_email_button"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/meetus"
        android:id="@+id/imageView2"
        android:layout_above="@+id/emailText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp" />

    <Button
        android:text="@string/verify_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verify_email_button"
        android:background="@drawable/barreguess"
        android:layout_below="@+id/buttonSignUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/barreguess"
        android:id="@+id/buttonSignUp"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="165dp"
        android:layout_height="165dp"
        app:srcCompat="@drawable/welcome"
        android:maxWidth="25dp"
        android:id="@+id/imageView6"
        android:layout_alignBottom="@+id/imageView9"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/verify_your_password"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/PasswordHint"
        android:ems="10"
        android:id="@+id/editTextVerifyPass"
        android:layout_above="@+id/passwordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/EmailHint"
        android:ems="10"
        android:id="@+id/emailText"
        android:layout_above="@+id/editTextVerifyPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="35dp"
        app:srcCompat="@drawable/transparent_text_effect"
        android:id="@+id/imageView9"
        android:maxHeight="15dp"
        android:layout_marginBottom="29dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

</RelativeLayout>